--- a/labs/03-user/wiki/demo.wiki
+++ b/labs/03-user/wiki/demo.wiki
@@ -1,6 +1,6 @@
 ===== Demo =====
 
-În acest demo vrem să ne acomodăm cu cele mai importante comenzi utilizate atunci când lucrăm cu utilizatori, grupuri de utilizatori sau permisiuni în Linux.
+În acest demo dorim să ne acomodăm cu cele mai importante comenzi utilizate atunci când lucrăm cu utilizatori, grupuri de utilizatori sau permisiuni în Linux.
 
 <note tip>
 Să nu uităm de [[uso:resurse:cheatsheet|cheatsheetul]] pe care îl putem folosi ca să ne reamintim cele mai frecvente comenzi.
@@ -13,9 +13,8 @@ Exemplu: ''sudo apt-get install finger''.
 
 ==== Utilizatori privilegiați si neprivilegiați (id, finger, whoami) ====
 
-În continuare, vom vedea cum aflăm câteva informații despre utilizatori și cum schimbăm utilizatorul cu care suntem autentificați.
-
-În acest moment suntem siguri că în sistem exista cel puțin doi utilizatori, utilizatorul cu care ne-am logat (student) și utilizatorul root.
+În continuare, vom vedea cum putem afla informații despre utilizatori.
+În sistem exista cel puțin doi utilizatori: utilizatorul cu care ne-am logat (''student'') și utilizatorul privilegiat ''root''.
 
 Pentru a afla informații despre un utilizator sau pentru a verifica dacă un anumit utilizator există, putem folosi comanda ''finger''.
 
@@ -35,137 +34,28 @@ No mail.
 No Plan.
 </code>
 
-În outputul comenzii observăm directorul home al utilizatorului, numele complet, shell-ul de login, etc.
+În outputul comenzii observăm informatii despre utilizatorul ''student'', precum directorul ''home'', numele complet etc.
 
-O altă comandă utilă este ''id''. Cum și numele sugerează, ne dă id-ul utilizatorului dar și id-urile grupurilor din care face parte utilizatorul curent.
+O altă comandă utilă este ''id''. Cum și numele sugerează, ne dă id-ul utilizatorului (''uid'') dar și id-urile grupurilor (''gid'') din care face parte utilizatorul curent.
 
 <code bash>
 student@uso:~$ id
 uid=1000(student) gid=1000(student) groups=1000(student),4(adm),24(cdrom),27(sudo),30(dip),46(plugdev),116(lpadmin),126(sambashare)
 </code>
 
-Pentru a vedea cu ce utilizator suntem logați putem folosi comanda ''whoami''.
+Pentru a vedea cu ce utilizator suntem logați, putem folosi comanda ''whoami''.
 <code bash>
 student@uso:~$ whoami
 student
 </code>
 
-==== Schimbarea utilizatorului curent (su) ====
+==== Rularea comenzilor ca utilizator privilegiat (sudo) ====
 
-Pentru a schimba utilizatorul cu care suntem autentificați folosim comanda ''su''.
-Înlănțuirea de comenzi de mai jos schimbă utilizatorul ''student'' în utilizatorul ''root'', verifică că acum utilizatorul logat este ''root'', închide sesiunea utilizatorului ''root'' și revine la utilizatorul ''student' folosind comanda ''exit''.
+Să presupunem că pe un sistem avem 100 de utilizatori și vrem ca toți să aibă drepturile necesare instalării de noi pachete, dar să nu poată adăuga/șterge alți utilizatori. Pe lângă faptul că ar fi foarte foarte nesigur ca 100 de persoane să știe parola contului de root, ar trebui să ne bazăm pe faptul că ei nu vor face altceva decât să instaleze pachete. Soluția acestei probleme este comanda ''sudo''.
 
-<code bash>
-student@uso:~$ su root
-Password:
-root@uso:/home/student# whoami
-root
-root@uso:/home/student# exit
-exit
-student@uso:~$
-</code>
+Această comandă permite execuția de comenzi de către utilizatori neprivilegiați cu drepturi de utilizatori privilegiați. Se poate configura ce utilizatori au drept să execute această comandă și ce comenzi pot rula ca utilizator privilegiat.
 
-<note important>
-De observat că atunci când schimbăm utilizatorul, nu se schimbă și directorul curent în directorul home al noului utilizator.
-</note>
-
-==== Gestiunea utilizatorilor (adduser/deluser) ====
-
-În continuare vom crea noi utilizatori iar ulterior îi vom șterge. Pentru aceasta vom folosi comenzile ''adduser'' și ''deluser''.
-
-<note important>
-Cele două comenzi sunt de fapt niște scripturi ''wrapper'' scrise în [[https://www.perl.org|Perl]] prezente, în general, numai pe distribuții bazate pe [[http://www.debian.org|Debian]] (cum ar fi Ubuntu). Comenzile pe care le apelează ele în spate sunt ''useradd'' și ''userdel''.
-</note>
-
-Dorim să creăm utilizatorul ''bogdan''. Mai întâi verificăm că acesta nu există, după care îl creăm.
-
-<code bash>
-student@uso:~$ finger bogdan
-finger: bogdan: no such user.
-</code>
-
-<code bash>
-student@uso:~$ sudo adduser bogdan
-Adding user `bogdan' ...
-Adding new group `bogdan' (1002) ...
-Adding new user `bogdan' (1002) with group `bogdan' ...
-Creating home directory `/home/bogdan' ...
-Copying files from `/etc/skel' ...
-Enter new UNIX password:
-Retype new UNIX password:
-passwd: password updated successfully
-Changing the user information for bogdan
-Enter the new value, or press ENTER for the default
-	Full Name []: Bogdan
-	Room Number []:
-	Work Phone []:
-	Home Phone []:
-	Other []:
-Is the information correct? [Y/n] Y
-</code>
-
-În outputul comenzii anterioare observăm mai multe informații utile la adăugarea unui nou utilizator:
-  * se creează un nou grup cu același nume
-  * se creează home-ul utilizatorului
-  * directorul home va copia structura de fișiere și directoare din directorul ''/etc/skel''
-  * se cere o parolă și alte informații care sunt afișate la apelul comenzii ''finger''.
-
-<code bash>
-bogdan@uso:~$ finger bogdan
-Login: bogdan                           Name: Bogdan
-Directory: /home/bogdan                 Shell: /bin/bash
-Never logged in.
-No mail.
-No Plan.
-</code>
-
-După aceasta ne și autentificăm ca utilizatorul bogdan.
-
-<code bash>
-student@uso:~$ su - bogdan
-Password:
-bogdan@uso:~$ pwd
-/home/bogdan
-bogdan@uso:~$ whoami
-bogdan
-</code>
-
-Dacă utilizatonul nu mai trebuie să existe în sistem, îl ștergem folosind comanda ''deluser''.
-
-<code bash>
-student@uso:~$ sudo deluser bogdan
-Removing user `bogdan' ...
-Warning: group `bogdan' has no more members.
-Done.
-student@uso:~$ finger bogdan
-finger: bogdan: no such user.
-</code>
-
-==== Schimbarea parolei (passwd) ====
-
-Pentru a schimba parola utilizatorului curent folosim comanda ''passwd'', fără argumente.
-
-<code bash>
-student@uso:~$ passwd
-Changing password for student.
-(current) UNIX password:
-Enter new UNIX password:
-Retype new UNIX password:
-passwd: password updated successfully
-
-Dacă dorim schimbarea parolei altui utilizator, îi putem oferi comenzii ''passwd'' numele acestuia ca parametru.
-
-root@uso:~# passwd student
-Enter new UNIX password:
-Retype new UNIX password:
-passwd: password updated successfully
-</code>
-
-==== Drepturi pentru anumite comenzi (sudo) ====
-
-Să presupunem că pe un sistem avem 100 de utilizatori și vrem ca toți să aibă drepturile necesare instalării de noi pachete, dar să nu poată adăuga/șterge alți utilizatori. Pe lângă faptul că ar fi foarte foarte nesigur ca 100 de persoane să știe parola contului de root, ar trebui să ne bazăm pe încrederea că ei nu vor face altceva decât să instaleze pachete. Soluția acestei probleme este comanda ''sudo''.
-
-Dorim să instalăm pachetul ''cowsay''.
+De exemplu, dacă dorim să instalăm pachetul ''cowsay'' ca utilizatorul ''student'', vom primi o eroare de permisiune.
 
 <code bash>
 student@uso:~$ apt-get install cowsay
@@ -174,7 +64,6 @@ E: Unable to lock the administration directory (/var/lib/dpkg/), are you root?
 </code>
 
 După cum observăm din eroarea afișată în output, nu avem drepturi să instalăm pachete.
-
 Pentru a rezolva această problemă folosim comanda ''sudo''.
 
 <code bash>
@@ -193,12 +82,129 @@ student@uso:~$ cowsay "Meuh"
 
 </code>
 
-==== Ownership și permisiuni ====
+<note important>
+Comanda ''sudo'' cere parola utilizatorului curent (în cazul nostru utilizatorul ''student''), nu pe cea a utilizatorului ''root''.
+</note>
 
-Pentru a vedea ce permisiuni avem pe un anumit director sau fișier folosim comanda ''ls -l''.
+==== Schimbarea utilizatorului curent (su) ====
+
+Pentru a schimba utilizatorul cu care suntem autentificați, folosim comanda ''su'' (switch user). Comanda lanseaza o sesiune nouă de terminal în contextul noului utilizator, deci pentru a reveni la utilizatorul precedent este suficient să rulăm comanda ''exit'' pentru a termina noua sesiune.
+
+Înlănțuirea de comenzi de mai jos schimbă utilizatorul curent din ''student'' în ''root'', verifică că acum utilizatorul logat este ''root'', închide sesiunea utilizatorului ''root'' și revine la utilizatorul ''student'' folosind comanda ''exit''.
+Întrucât nu cunoaștem parola utilizatorului ''root'', putem folosi această comanda împreună cu comanda ''sudo''.
 
 <code bash>
-student@uso:~$ ls -l
+student@uso:~$ sudo su root
+[sudo] password for student:
+root@uso:/home/student# whoami
+root
+root@uso:/home/student# exit
+exit
+student@uso:~$
+</code>
+
+<note important>
+De observat că atunci când schimbăm utilizatorul, nu se schimbă și directorul curent în directorul home al noului utilizator.
+</note>
+
+==== Gestiunea utilizatorilor (adduser/deluser) ====
+
+În continuare vom crea noi utilizatori iar ulterior îi vom șterge. Pnetru aceasta, vom folosi comenzile **adduser** și **deluser** .
+
+<note important>
+Cele două comenzi sunt de fapt niște scripturi //wrapper// scrise în [[https://www.perl.org|Perl]] prezente, în general, numai pe distribuții bazate pe [[http://www.debian.org|Debian]] (cum ar fi Ubuntu). Comenzile pe care le apelează ele în spate sunt ''useradd'' și ''userdel''.
+</note>
+
+Dorim să creăm utilizatorul ''bogdan''. Mai întâi verificăm că acesta nu există, după care îl adăugăm.
+
+<code bash>
+student@uso:~$ finger bogdan
+finger: bogdan: no such user.
+</code>
+
+<code bash>
+student@uso:~$ sudo adduser bogdan
+Adding user `bogdan' ...
+Adding new group `bogdan' (1002) ...
+Adding new user `bogdan' (1002) with group `bogdan' ...
+Creating home directory `/home/bogdan' ...
+Copying files from `/etc/skel' ...
+Enter new UNIX password:
+Retype new UNIX password:
+passwd: password updated successfully
+Changing the user information for bogdan
+Enter the new value, or press ENTER for the default
+        Full Name []: Bogdan
+        Room Number []:
+        Work Phone []:
+        Home Phone []:
+        Other []:
+Is the information correct? [Y/n] Y
+</code>
+
+În outputul comenzii anterioare observăm mai multe informații utile la adăugarea unui nou utilizator:
+  * se creează un nou grup cu același nume
+  * se creează home-ul utilizatorului
+  * directorul home va copia structura de fișiere și directoare din directorul ''/etc/skel''
+  * se cere o parolă și alte informații care sunt afișate la apelul comenzii ''finger''.
+
+<code bash>
+bogdan@uso:~$ finger bogdan
+Login: bogdan                           Name: Bogdan
+Directory: /home/bogdan                 Shell: /bin/bash
+Never logged in.
+No mail.
+No Plan.
+</code>
+
+După aceasta ne autentificăm ca utilizatorul ''bogdan''. Argumentul ''-'' este folosit pentru comanda ''su'' pentru a schimba directorul curent la home-ul noului utilizator.
+
+<code bash>
+student@uso:~$ su - bogdan
+Password:
+bogdan@uso:~$ pwd
+/home/bogdan
+bogdan@uso:~$ whoami
+bogdan
+</code>
+
+Dacă utilizatonul nu mai este necesar în sistem, îl ștergem folosind comanda ''deluser''.
+
+<code bash>
+student@uso:~$ sudo deluser bogdan
+Removing user `bogdan' ...
+Warning: group `bogdan' has no more members.
+Done.
+student@uso:~$ finger bogdan
+finger: bogdan: no such user.
+</code>
+
+==== Schimbarea parolei (passwd) ====
+
+Pentru a schimba parola utilizatorului curent folosim comanda ''passwd'', fără argumente. Înainte de introducere unei parole noi, trebuie să validăm parola veche.
+
+<code bash>
+student@uso:~$ passwd
+Changing password for student.
+(current) UNIX password:
+Enter new UNIX password:
+Retype new UNIX password:
+passwd: password updated successfully
+
+Dacă dorim schimbarea parolei altui utilizator, îi putem oferi comenzii ''passwd'' numele acestuia ca parametru.
+
+root@uso:~# passwd student
+Enter new UNIX password:
+Retype new UNIX password:
+passwd: password updated successfully
+</code>
+
+==== Ownership și permisiuni ====
+
+Pentru a inspecta permisiunile și deținătorii unui anumit director sau fișier folosim comanda ''ls'', împreună cu argumentul ''-l''.
+
+<code bash>
+student@uso:~$ ls -l /home/student
 total 56
 drwxr-xr-x  2 student student 4096 aug  6 17:41 Desktop
 drwxr-xr-x  3 student student 4096 aug 20 21:00 Documents
@@ -213,25 +219,39 @@ drwxr-xr-x 14 student student 4096 aug 20 20:57 uso.git
 -rw-r--r--  1 student student 4827 aug 21 14:37 vm-actions-log.txt
 </code>
 
+Dacă rulăm comanda pe un director, implicit se vor lista fișierele din director și nu vom vedea permisiunile acestuia. Pentru a vedea permisiunile directorului, putem folosi argumentul ''-d'' pentru comanda ''ls'', împreună cu calea către director.
+
+<code bash>
+student@uso:~$ ls -ld uso.git/
+drwxr-xr-x 14 student student 4096 aug 20 20:57 uso.git/
+</code>
+
 Semnificația fiecărui câmp din outuput-ul anterior este prezentată în tabelul de mai jos, folosind ca exemplu informațiile afișate pentru directorul ''Desktop''.
 
-^ Type of file ^ Permissions ^ Number of hard links ^ Owner ^ Group ^ Syze in bytes ^ Date and time of last modification ^ Name ^
+^ Tip ^ Permisiuni ^ Număr de referințe ^ Owner ^ Grup ^ Dimensiunea în octeți ^ Data și ora ultimei modificări ^ Nume ^
 | d | rwxr-xr-x | 2 | student | student | 4096 | aug  6 17:41 | Desktop |
 
-Coloanele care ne interesează pe noi sunt: Permissions, Owner și Group.
+Coloanele din tabel au următoarea semnificație:
 
-Permisiunile sunt specificate pe fiecare fișier sau director și au următoarea structură:
+  * Tip: indică dacă intrarea este un fișier (''-'') sau director (''d'')
+  * Permisiuni: specifică ce drepturi au asupra fișierului cele trei categorii de utilizatori (owner, grup și others). Fiecărui grup îi corespund 3 caractere (r -- read; w -- write, x -- execute). În acest caz, owner-ul fișierului (utilizatorul ''student'') are toate cele trei permisiuni (''rwx''), iar utilizatorii din grupul ce deține fișierul (grupul ''student'') și toți ceilalți utilizatori din sistem (''others'') au permisiuni de citire și execuție (''r-x'').
+  * Owner/Grup - utilizatorul/grupul care dețin fișierul
 
-^    d    ^    r (read)    ^    w (write)    ^    x (execute)    ^    r (read)    ^    w (write)    ^    x (execute)    ^    r (read)    ^    w (write)    ^    x (execute)    ^
-| ::: ||    Owner permissions    |||    Group permissions    |||    Others permissions    |||
-|    Type of file (directory)    |    4    |    2    |    1    |    4    |    2    |    1    |    4    |    2    |    1    |
-| ::: |    7    |||    5    |||    5    |||
+Permisiunile se pot specifica și folosind cifre (notație în baza 8 -- //octal//):
+  * ''r'' = 4
+  * ''w'' = 2
+  * ''x'' = 1
+Pentru a determina permisiunile unei anumite categorii, adunăm cele 3 valori. Astfel, pentru exemplul de mai sus, permisiunile sunt ''755'' (7 pentru owner, 5 pentru grup și 5 pentru others).
 
-La crearea unui fișier sau director se alocă în mod automat permisiunile default. Aceste permisiuni pot fi modificate ulterior.
+=== Modificarea permisiunilor ===
 
-Pentru a modifica permisiunile unei resurse folosim comanda ''chmod''.
+La crearea unui fișier sau director se atribuie valori implicite pentru permisiuni. Acestea se pot modifica ulterior.
 
-Mai întâi creăm un nou fișier, după care îi vom modifica permisiunile pe care le are.
+Pentru a demonstra modul de lucru cu permisiunile, vom crea un fișier nou, după care îi vom modifica permisiunile.
+Permisiunile noi se pot specifica folosind comanda ''chmod'', folosind oricare din cele doua notații:
+
+  - În octal: 777 (drepturi depline: rwx), 740 (drepturi depline pentru owner, de citire pentru utilizatorii din grup și nicio permisiune pentru alți utilizatori).
+  - Alfabetică: +/-[rwx] -- o folosim de obicei atunci când dorim să modificăm o singură permisiune. De exemplu, ''+r'' permite accesul de citire, iar ''-w'' șterge accesul de scriere.
 
 <code bash>
 student@uso:~$ touch testfile.sh
@@ -239,11 +259,7 @@ student@uso:~$ ls -l testfile.sh
 -rw-r--r-- 1 student student 0 sep 16 16:47 testfile.sh
 </code>
 
-Pentru a modifica permisiunile unui fișier există două metode:
-  1. Folosind notația alfabetică: +/-[rwx]
-  2. Folosind notația octală: 777 (drepturi depline: rwx), 700 (drepturi depline pentru owner)
-
-După cum observăm, fișierul nou creat nu are drepturi de execuție și dorim să îi dăm acest drept, folosind ambele metode.
+După cum observăm, nu vom putea executa scriptul nou creat, deoarece utilizatorul student nu are drepturi de execuție asupra lui. Ne propunem să permitem execuția, folosind ambele metode.
 
 #1
 <code bash>
@@ -255,10 +271,6 @@ student@uso:~$ chmod -x testfile.sh
 student@uso:~$ ls -l testfile.sh
 -rw-r--r-- 1 student student 0 sep 16 16:47 testfile.sh
 </code>
-
-<note important>
-Pentru a adăuga permisiuni folosim semnul + iar pentru a le șterge folosim -, urmat de permisiunile pe care dorim să le adăugăm, respectiv să le ștergem: r, w, x.
-</note>
 
 #2
 <code bash>
