labs/03-user: Update "Get-a-life" wiki contents

--- a/labs/03-user/wiki/get-a-life.wiki
+++ b/labs/03-user/wiki/get-a-life.wiki
@@ -1,6 +1,8 @@
 ===== Get a life =====
 
-1. Să se creeze un nou utilizator și să se adauge automat în directorul home următoare structură de fișiere și directoare:
+** 1. Structură de fișiere default **
+
+Să se configureze sistemul astfel încât la adăugarea unui nou utilizator să se creeze automat în directorul său ''home'' următoarea structură de fișiere și directoare:
 
 <code bash>
 .
@@ -11,14 +13,16 @@
 </code>
 
 <note tip>
-HINT: skeleton directory
+**HINT**: skeleton directory
 </note>
 
-2. Să se scrie un script care să creeze utilizatorul ''morty'' din grupul ''rick'', având parola ''rickandmorty''. Scriptul trebuie să fie neinteractiv.
-
-3. SUID / GUID / Sticky bit 
+** 2. SUID / GUID / Sticky bit **
 
 Până în acest moment ați folosit doar permisiunile ''r'' (read), ''w'' (write) și ''x'' (execute).
 Pe lângă acești biți, mai există încă trei, cunoscuți ca ''SUID'', ''GUID'' și ''Sticky bit''.
 Căutați care este diferența dintre aceste trei permisiuni, la ce se folosesc și dați câte un exemplu real de utilizare pentru fiecare în parte.
-Discutați intre voi și cu asistentul pentru a verifica că ați înțeles corect.
+Discutați între voi și cu asistentul pentru a verifica dacă ați înțeles corect.
+
+** 3. Script pentru crearea de utilizatori **
+
+Să se scrie un script care să creeze utilizatorul ''morty'' din grupul ''rick'', având parola ''rickandmorty''. Scriptul trebuie să fie neinteractiv.
