--- a/labs/05-cli/wiki/concepts.wiki
+++ b/labs/05-cli/wiki/concepts.wiki
@@ -16,7 +16,7 @@ De cele mai multe ori, stdin este reprezentat de tastatură, iar stdout
 
 <note>
 Numerele ''0'', ''1'' și ''2'' reprezintă ''descriptorii de fișier'' pentru 
-fluxurile standar prezentate.
+fluxurile standard prezentate.
 </note>
 
 ==== Redirectări ====
@@ -65,11 +65,66 @@ realiza acest lucru în linia de comandă, folosim operatorul ''|'' numit ''pipe
 (TODO exemplu)
 
 ==== Variabile ====
-=== Variabile de shell ===
+O **variabilă** în shell-ul Linux este asemănătoare cu o variabilă pe care o declarăm 
+într-un limbaj de programare cum ar fi ''C''. Ea are un ''nume'' prin care o identificăm 
+și o ''valoare'' asociată.
+
+Putem folosi utilitarul ''echo <nume variabilă>'' pentru afișarea valorii unei variabile din terminal.
+
+=== Variabile speciale în terminalul Bash ===
+Terminalul Bash dispune de câteva variabile speciale pe care le putem găsi în tabelul de mai jos.
+^ Variabila     ^ Semnificație                                 ^
+| **''$$''**    | PID-ul procesului curent                     |
+| **''$!''**    | PID-ul ultimului proces lansat in background |
+| **''$?''**    | Valoarea de exit a ultimei comenzi           |
+| **''$_''**    | Ultimul argument al ultimei comenzi          |
+
 === Variabile de mediu ===
+Variabilele de mediu sunt un set de variabile care afectează modul în care un program rulează. 
+În general, un proces moștenește variabilele de mediu ale procesului părinte. 
+Astfel, pentru procesul asociat rulării unei comenzi, sunt moștenite variabilele shell-ului.
+De obicei, variabilele de mediu au nume scris cu majuscule. Cele mai uzuale exemple de varibile 
+de mediu sunt:
+
+  * ''PATH'' - o listă de directoare folosite de shell pentru a găsi executabilul asociat comenzii. Directoarele sunt separate prin '':''.
+  * ''HOME'' - directorul ''home'' al utilizatorului curent.
+  * ''USER'' - utilizatorul curent
+  * ''OLDPWD'' - calea directorului anterior
+  * ''EDITOR'' - editorul implicit.
+
 === Variabile în shell ===
+Pe lângă variabilele predefinite de care am vorbit până acum, avem posibilitatea să ne declarăm 
+propriile variabile pentru a le folosi în orice scop am avea nevoie. Vom vedea la secțiunea ''Demo'' 
+cum exact putem face acest lucru. 
 
 ==== Avantaje și dezavantaje CLI vs. GUI ====
+Fie că vorbim de ''CLI (Command Line Interface)'', fie de ''GUI (Graphic User Interface)'', există 
+o serie de avantaje și dezavantaje pentru fiecare, și, în funcție de ce rezultat vrem să obținem în final, 
+alegem una dintre cele 2 interfețe.
+
+Avantajul principal al liniei de comandă este faptul că putem automatiza task-uri care, dacă ar fi realizate 
+manual din interfață grafică, ar dura foarte mult. Să zicem că vrem să creăm 10 de fișiere cu numele ''my_fileX'', 
+unde ''X'' ia valori între ''1'' și ''10''. Dacă alegem să facem asta din linia de comandă, am face în felul următor:
+
+<code bash>
+student@uso:/uso.git/$ touch my_file{1..10}
+student@uso:/uso.git/$ TODO
+</code>
+
+În general, utilizatorii, în special cei nontehnici, preferă GUI în defavoarea CLI deoarece este mai intuitiv și 
+mai ușor de folosit în momentul în care nu se cunosc comenzile specificie interfeței în linia de comandă.
+
 
 ==== Și în final.. ce înseamnă automatizare? ====
+Am vorbit mai devreme de automatizare, însă nu am punctat exact ce înseamnă ''a automatiza'' un task. 
+Automatizarea presupune gruparea comenzilor necesare pentru a realiza o anumită acțiune într-un ''script'' 
+care va putea fi rulat de fiecare dată când va fi nevoie. Spre exemplu, putem să avem un script care să 
+scaleze un set de imagini dintr-un director. Dacă știm că e posibil să avem nevoie de mai multe ori să 
+facem asta, atunci cu siguranță merită să investim puțin timp pentru a realiza un script care să facă asta 
+pentru noi. Îl creăm, îl testăm și îl rulăm de fiecare dată când avem nevoie. 
+
+Totodată, shell-ul are propriile scripturi de configurare. Un exemplu ar fi ''~/.bashrc'' care conține o serie 
+de comenzi, ce sunt rulate atunci când deschidem interactiv un nou terminal, și sunt utile la inițializarea 
+shell-ului. Vom vedea mai încolo că și noi ca utilizatori obișnuiți putem modifica acest script pentru a ne 
+personaliza shell-ul.
 
